--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "jsdom": "^20.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sass": "^1.56.1",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vite-plugin-vuetify": "^1.0.0",
     "vitest": "^0.24.3",
-    "vue-tsc": "^1.0.8"
+    "vue-tsc": "^1.0.11"
   }
 }
