--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "story:preview": "histoire preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.9.0",
     "animejs": "^3.2.1",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
